@@ -7,8 +7,9 @@
 - Add logic to detect a fresh plugin install (no version set in options, no snippets set in options). Set version number to current CFSP_VERSION and bypasses any upgrade actions.
 - Add permissions detection to Ajax calls and in other places.
 - Add error message is snippet not removed via ajax.
-- Remove snippet admin page, make post tyep public to allow native WordPress handling.
-- Move help to post type pages.
+- Make post type public to allow native WordPress handling. Add appropraite post type labels.
+- Move contextual help to post type pages.
+- Add sortable "key" column to post admin pages. Change "title" to "description".
 
 ## 3.2.3
 - Updated the upgrade routine to be more robust.
